# fargs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
src/examples/: simple.ipynb  simple.py
src/fargs/: __init__.py  config.py  exceptions.py  llm.py  main.py  utils.py
src/fargs/components/: __init__.py  base.py  claims.py  communities.py  entities.py  graph.py  relationships.py
src/fargs/data/: __init__.py  base.py  graph.py  parquet.py  utils.py
src/fargs/models/: __init__.py  claims.py  communities.py  community.py  entities.py  outputs.py  relationships.py  sources.py
src/fargs/pipeline/: __init__.py  base.py  documents.py  graph.py  main.py  progress.py  prompts.py
src/fargs/pipeline/prompts/: __init__.py  extract_entities.py  extract_relationships.py  resolve_entities.py
src/fargs/pipeline/tasks/: __init__.py  documents.py
src/fargs/prompts/: __init__.py  claims.py  communities.py  community_report.py  entities.py  extract_claims.py  extract_entities.py  extract_relationships.py  relationships.py  resolve_entities.py  summarize.py
