[project]
name = "fargs"
version = "0.0.1.dev6"
description = "Frankly, Another RAG with Graphs and... Stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic~=2.9.2",
    "torch~=2.4.1",
    "ell-ai[all]>=0.0.14",
    "llama-index-core~=0.11.14",
    "llama-index-storage-docstore-postgres==0.2.0",
    "llama-index-vector-stores-postgres==0.2.6",
    "llama-index-graph-stores-neo4j==0.3.3",
    "llama-index-embeddings-openai==0.2.5",
    "aiolimiter~=1.1.0",
    "requests~=2.32",
    "aiohttp~=3.10.5",
    "retry2~=0.9.5",
    "retry-async~=0.1.4",
    "networkx~=3.3",
    "graspologic~=3.4.1",
    "future>=1.0.0",
    "tiktoken~=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "ASYNC",
    "N",
    "UP",
    "YTT",
    "DTZ",
    "A",
    "B",
    "I"
]

[tool.ruff.lint.isort]
force-single-line = true